--- a/map.html
+++ b/map.html
@@ -43,6 +43,6 @@
 	</script>
     </head>
     <body>
-	<div id="map" style="width: 500px; height: 300px;"></div>
+	<div id="map" style="width: 100vw; height: 100vh;"></div>
     </body>
 </html>
