change initial point

--- a/map.html
+++ b/map.html
@@ -27,7 +27,7 @@
 	 
 	 window.onload = function()
 	 {
-	     var map = L.map('map').setView([36.3219088　, 139.0032936], 14);
+	     var map = L.map('map').setView([35.69, 139.75], 11);
 	     
 	     //OSMレイヤー追加
 	     L.tileLayer(
